--- a/views/competitions/_form.pug
+++ b/views/competitions/_form.pug
@@ -84,74 +84,113 @@
   label(for="contact") 연락처
   input.form-control(type="text", name="contact", placeholder="What's your contact?", value=competition.title)
 
+//- .form-group
+//-   label(for="location") Location
+//-   |
+//-   br
+//-   | 원하는 장소      
+//-   |
+//-   #map(style='width:100%;height:350px;')
+//-   p
+//-     button(onclick='setCenter()') 지도 중심좌표 이동시키기
+//-     button(onclick='panTo()') 지도 중심좌표 부드럽게 이동시키기
+//-   script(type='text/javascript', src='//dapi.kakao.com/v2/maps/sdk.js?appkey=d12b5cc694e0ca85431b8fb034a4ffba')
+//-   script.
+//-     var mapContainer = document.getElementById('map'), // 지도를 표시할 div
+//-     mapOption = {
+//-     center: new daum.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
+//-     level: 3 // 지도의 확대 레벨
+//-     };
+//-     var map = new daum.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
+//-     function setCenter() {
+//-     // 이동할 위도 경도 위치를 생성합니다
+//-     var moveLatLon = new daum.maps.LatLng(33.452613, 126.570888);
+//-     // 지도 중심을 이동 시킵니다
+//-     map.setCenter(moveLatLon);
+//-     }
+//-     function panTo() {
+//-     // 이동할 위도 경도 위치를 생성합니다
+//-     var moveLatLon = new daum.maps.LatLng(33.450580, 126.574942);
+//-     // 지도 중심을 부드럽게 이동시킵니다
+//-     // 만약 이동할 거리가 지도 화면보다 크면 부드러운 효과 없이 이동합니다
+//-     map.panTo(moveLatLon);
+//-     }
 
-|
-br
 
-
-
-
+        
 
 script.
 
   $('#summernote').summernote({
-  placeholder: 'Hello bootstrap 4',
+  placeholder: 'Please enter your content.',
   tabsize: 2,
   height: 100
   });
   
-  $(document).ready(function () {
-    // Summernote, edit enter key
-    $.summernote.addPlugin({
-      name : 'myenter',
-      events : {
-        // redefine insertParagraph 
-        'insertParagraph' : function(event, editor, layoutInfo) {
-
-          // custom enter key
-          var newLine = '<br />';
-          pasteHtmlAtCaret(newLine);
-
-          // to stop default event
-          event.preventDefault();
-        }
-      }
-    });
-  });
-
-  function pasteHtmlAtCaret(html) {
-      var sel, range;
-      if (window.getSelection) {
-          // IE9 and non-IE
-          sel = window.getSelection();
-          if (sel.getRangeAt && sel.rangeCount) {
-              range = sel.getRangeAt(0);
-              range.deleteContents();
-
-              // Range.createContextualFragment() would be useful here but is
-              // only relatively recently standardized and is not supported in
-              // some browsers (IE9, for one)
-              var el = document.createElement("div");
-              el.innerHTML = html;
-              var frag = document.createDocumentFragment(), node, lastNode;
-              while ( (node = el.firstChild) ) {
-                  lastNode = frag.appendChild(node);
-              }
-              range.insertNode(frag);
-
-              // Preserve the selection
-              if (lastNode) {
-                  range = range.cloneRange();
-                  range.setStartAfter(lastNode);
-                  range.collapse(true);
-                  sel.removeAllRanges();
-                  sel.addRange(range);
+  $.extend($.summernote.plugins, {
+      'myenter': function (context) {
+          this.events = {
+              'summernote.enter': function (we, event) {
+                  // custom enter key
+                  pasteHtmlAtCaret($.summernote.dom.blank);
+                  event.preventDefault()
               }
           }
-      } else if (document.selection && document.selection.type != "Control") {
-          // IE < 9
-          document.selection.createRange().pasteHTML(html);
-      }
-  }
+      },
+  })
+
+//-         //스팸..
+//- script.
+//-   $(document).ready(function() {
+//-   $('#comment_form').submit(function() {
+//-   $(this).ajaxSubmit({
+//-   error: function(xhr) {
+//-   status('Error: ' + xhr.status);
+//-   },
+//-   success: function(response) {
+//-   console.log(response);
+//-   }
+//-   });
+//-   //Very important line, it disable the page refresh.
+//-   return false;
+//-   });
+//-   });
+
+  
+
+  //- function pasteHtmlAtCaret(html) {
+  //-     var sel, range;
+  //-     if (window.getSelection) {
+  //-         // IE9 and non-IE
+  //-         sel = window.getSelection();
+  //-         if (sel.getRangeAt && sel.rangeCount) {
+  //-             range = sel.getRangeAt(0);
+  //-             range.deleteContents();
+
+  //-             // Range.createContextualFragment() would be useful here but is
+  //-             // only relatively recently standardized and is not supported in
+  //-             // some browsers (IE9, for one)
+  //-             var el = document.createElement("div");
+  //-             el.innerHTML = html;
+  //-             var frag = document.createDocumentFragment(), node, lastNode;
+  //-             while ( (node = el.firstChild) ) {
+  //-                 lastNode = frag.appendChild(node);
+  //-             }
+  //-             range.insertNode(frag);
+
+  //-             // Preserve the selection
+  //-             if (lastNode) {
+  //-                 range = range.cloneRange();
+  //-                 range.setStartAfter(lastNode);
+  //-                 range.collapse(true);
+  //-                 sel.removeAllRanges();
+  //-                 sel.addRange(range);
+  //-             }
+  //-         }
+  //-     } else if (document.selection && document.selection.type != "Control") {
+  //-         // IE < 9
+  //-         document.selection.createRange().pasteHTML(html);
+  //-     }
+  //- }
 
 
