--- a/views/index.pug
+++ b/views/index.pug
@@ -65,52 +65,57 @@ block content
               span.sr-only Next
 
         
-        |
-        br
-        |
-        br
-        |
-        |
-        |
-            
-        br
-        br
-        .card-group
-          .card
-            img.card-img-top(src='images/poster1.png', alt='Card image cap')
-            .card-body
-              h5.card-title 2018 빅데이터 아이디어 공모전
-              p.card-text
-                | This is a wideㅁㅇㄹㅇr card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
-              p.card-text
-                small.text-muted Last updated 3 mins ago
-          .card
-            img.card-img-top(src='images/poster2.jpg', alt='Card image cap')
-            .card-body
-              h5.card-title Bu:Star 챌린지 게임공모전
-              p.card-text This card has supporting text below as a natural lead-in to additional content.
-              p.card-text
-                small.text-muted Last updated 3 mins ago
-          .card
-            img.card-img-top(src='images/poster3.jpg', alt='Card image cap')
-            .card-body
-              h5.card-title 2018년 ICT 융합 공모전
-              p.card-text
-                | This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.
-              p.card-text
-                small.text-muted Last updated 3 mins ago
-          .card
-            img.card-img-top(src='images/poster4.png', alt='Card image cap')
-            .card-body
-              h5.card-title 네이버 웨일 확장앱 콘테스트
-              p.card-text
-                | This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.
-              p.card-text
-                small.text-muted Last updated 3 mins ago
+            |
+            br
+            |
+            br
+            |
+            |
+            |
+                
+            br
+            br
+            .card-group
+              .card
+                img.card-img-top(src='images/poster1.png', alt='Card image cap')
+                .card-body
+                  h5.card-title 2018 빅데이터 아이디어 공모전
+                  p.card-text
+                    //- | 분야: 기획/아이디어, 웹/모바일/플래시, 게임/소프트웨어, 과학/공학, 취업/창업
+                    //- br
+                    //- | 응모대상: 제한없음, 기타
+                    //- br
+                    //- | 주최/주관: 과학기술정보통신부, 정보통신산업진흥원 / 대전광역시,대전정보문화산업진흥원
 
-        |
-        br
-        |
-        br
-        |
-        br
+                  p.card-text
+                    small.text-muted Last updated 3 mins ago
+              .card
+                img.card-img-top(src='images/poster2.jpg', alt='Card image cap')
+                .card-body
+                  h5.card-title Bu:Star 챌린지 게임공모전
+                  //- p.card-text This card has supporting text below as a natural lead-in to additional content.
+                  p.card-text
+                    small.text-muted Last updated 3 mins ago
+              .card
+                img.card-img-top(src='images/poster3.jpg', alt='Card image cap')
+                .card-body
+                  h5.card-title 2018년 ICT 융합 공모전
+                  p.card-text
+                    //- | This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.
+                  p.card-text
+                    small.text-muted Last updated 3 mins ago
+              .card
+                img.card-img-top(src='images/poster4.png', alt='Card image cap')
+                .card-body
+                  h5.card-title 네이버 웨일 확장앱 콘테스트
+                  p.card-text
+                    //- | This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.
+                  p.card-text
+                    small.text-muted Last updated 3 mins ago
+
+            |
+            br
+            |
+            br
+            |
+            br
