--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,93 +2,39 @@ doctype html
 html
   head
     title Competition Collection
+
+
     meta(name="viewport", content="width=device-width, initial-scale=1, shrink-to-fit=no")
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css')
-    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')
+    //- link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
-    script(src='https://code.jquery.com/jquery-3.2.1.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js')
+    script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js")
+    script(src='https://code.jquery.com/jquery-3.2.1.min.js')
+    //- script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js')
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js')
+    
+    script(src='/javascripts/application.js')
     script(src='https://code.jquery.com/jquery-3.3.1.min.js')
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css', integrity='sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm', crossorigin='anonymous')
     link(href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css', rel='stylesheet', integrity='sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN', crossorigin='anonymous')
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
 
-    script(src='https://cdn.jsdelivr.net/npm/gijgo@1.9.10/js/gijgo.min.js', type='text/javascript')
-    link(href='https://cdn.jsdelivr.net/npm/gijgo@1.9.10/css/gijgo.min.css', rel='stylesheet', type='text/css')
 
+    //- script(src='https://cdn.jsdelivr.net/npm/gijgo@1.9.10/js/gijgo.min.js', type='text/javascript')
+    //- link(href='https://cdn.jsdelivr.net/npm/gijgo@1.9.10/css/gijgo.min.css', rel='stylesheet', type='text/css')
+
+
+        //- fonticon
     script(defer='', src='https://use.fontawesome.com/releases/v5.0.8/js/solid.js', integrity='sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l', crossorigin='anonymous')
     script(defer='', src='https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js', integrity='sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c', crossorigin='anonymous')
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
 
 
- 
-  script(src='https://code.jquery.com/jquery-3.2.1.slim.min.js')
-  link(href='https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.9/summernote-lite.css', rel='stylesheet')
-  script(src='https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.9/summernote-lite.js')
-
-    //- link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css')
-    //- script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js')
-    //- script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js')
-    //- script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js')
-
-
-    //- link(href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css', rel='stylesheet', type='text/css')
-    //- link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/codemirror.min.css')
-    //- link(href='https://cdn.jsdelivr.net/npm/froala-editor@2.9.1/css/froala_editor.pkgd.min.css', rel='stylesheet', type='text/css')
-    //- link(href='https://cdn.jsdelivr.net/npm/froala-editor@2.9.1/css/froala_style.min.css', rel='stylesheet', type='text/css')
-    
-    //- script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js')
-    //- script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/codemirror.min.js')
-    //- script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/mode/xml/xml.min.js')
-    //- script(type='text/javascript', src='https://cdn.jsdelivr.net/npm/froala-editor@2.9.1/js/froala_editor.pkgd.min.js')
-    //- //- // Initialize the editor.
-    //- script.
-    //-   $(function() { $('textarea').froalaEditor() 
-
-    //-   function my_acf_add_local_field_groups() {
-    //-   remove_filter('acf_the_content', 'wpautop' );
-    //-   }
-    //-   add_action('acf/init', 'my_acf_add_local_field_groups');
-      
-      
-    //-   });
-
-
-  
-    //- // include summernote css/js
-    //- link(href='http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.8/summernote.css', rel='stylesheet')
-    //- //- script(src='http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.8/summernote.js')
-    //- //- 아니 근데..css겹쳐서 적용되어서 topnav이상해짐..아나
-    //- //- include summernote-ko-KR
-    //- script(src='lang/summernote-ko-KR.js')
-
-    //- link(rel='stylesheet', type='text/css', href='/semantic.min.css')
-    //- script(src='/jquery.min.js')
-    //- script(src='/semantic.min.js')
-    //- link(rel='stylesheet prefetch', href='http://cdnjs.cloudflare.com/ajax/libs/semantic-ui/0.16.1/css/semantic.min.css')
-    //- link(rel='stylesheet prefetch', href='https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/components/icon.min.css')
-
-    //- // include libraries(jQuery, bootstrap)
-    //- link(href='http://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css', rel='stylesheet')
-    //- script(src='http://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js')
-    //- script(src='http://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js')
- 
-        
-  //- script.
-  //-   $(document).ready(function() {
-  //-     $('#summernote').summernote({
-  //-     height : 300, // 에디터의 높이
-  //-     minHeight : null,
-  //-     maxHeight : null,
-  //-     focus : true,
-  //-     lang : 'ko-KR' // 기본 메뉴언어 US->KR로 변경
-  //-     });
-  //-     });
-  //-     var postForm = function() {
-  //-     var contents =  $('textarea[name="contents"]').html($('#summernote').code());
-  //-     }
-  
+        //- recaptcha
+    script(src='https://www.google.com/recaptcha/api.js')
+    link(href='https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.9/summernote-lite.css', rel='stylesheet')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.9/summernote-lite.js')
   body
     block top-nav
       include ./includes/topnav 
