--- a/views/signin.pug
+++ b/views/signin.pug
@@ -22,15 +22,15 @@ block content
             | Remember me
         button.btn.btn-dark.btn-block(type='submit' style='color: white') Signin
         a.btn.btn-primary.btn-block(href='/auth/facebook')
-          i.fab.fa-facebook-f
+          //- i.fab.fa-facebook-f
           | &nbsp;
           | Signin with Facebook
-        a.btn.btn-primary.btn-block(href='/auth/facebook')
-          i.fab.fa-google-plus-square
+        a.btn.btn-outline-primary.btn-block(href='/auth/google')
+          //- i.fab.fa-google-plus
           | &nbsp;
           | Signin with Google
-        a.btn.btn-warning.btn-block(href='/auth/facebook')
-          i.fa.fa-facebook.fa-lg
+        a.btn.btn-warning.btn-block(href='/auth/kakao')
+          //- i.fa.fa-facebook.fa-lg
           | &nbsp;
           | Signin with Kakao
         button.btn
