--- a/public/stylesheets/competitions.scss
+++ b/public/stylesheets/competitions.scss
@@ -147,3 +147,20 @@
     cursor: default;
   }
 }
+
+.competition-like-btn, .answer-unlike-btn {
+  .for-loading {display: none;}
+  cursor: pointer; 
+
+  &.loading {
+    & > span {display: none;}
+    .for-loading {display: inline-block;}
+    filter: opacity(30%);
+    cursor: wait;
+  }
+
+  &.disabled {
+    color: #bbb;
+    cursor: default;
+  }
+}
