--- a/views/users/edit.pug
+++ b/views/users/edit.pug
@@ -21,4 +21,8 @@ block content
         input.form-control(type='password', id='password_confirmation', name='password_confirmation', placeholder='Password Confirmation')
       a.btn.btn-outline-secondary(href='javascript:window.history.back();') Back 
       | 
-      button.btn.btn-primary(type='submit') Update
+      button.btn.btn-outline-warning(type='submit') Update
+      |
+      br
+      |
+      br
