--- a/views/layout.pug
+++ b/views/layout.pug
@@ -32,7 +32,7 @@ html
 
 
         //- recaptcha
-    //- script(src='https://www.google.com/recaptcha/api.js')
+    script(src='https://www.google.com/recaptcha/api.js')
     link(href='https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.9/summernote-lite.css', rel='stylesheet')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.9/summernote-lite.js')
     
